# CoffeePrices

./: .gitignore  GIT_PUSH_COMMANDS.txt  HERTZNER_DEPLOYMENT.md  PHASE1B_SQLMIGRATION.md  PHASE1_TODO.md  PROJECT_OUTLINE.md  README.md  alembic.ini  pyproject.toml  requirements.txt  run_pipeline.py
.github/workflows/: daily_update.yml
.streamlit/: config.toml
data/raw/: coffee_futures.parquet  coffee_producing_municipalities.geojson
notebooks/: 01_eda_prices.ipynb  02_eda_weather.ipynb  03_spatial_exploration.ipynb  04_correlation_analysis.ipynb  05_event_study.ipynb
reports/: analysis_summary.md
src/: config.py
src/analysis/: correlation.py  detect_shocks.py  event_study.py  models.py
src/dashboard/: app.py
src/data/: fetch_coffee.py  fetch_controls.py  fetch_weather.py  merge_data.py  process_weather.py  spatial_lookup.py
src/database/: credentials.py  engine.py  models.py
src/database/alembic/: env.py
src/database/repositories/: __init__.py  prices.py
src/visualization/: correlation_plots.py  price_charts.py  production_maps.py  regression_plots.py  weather_maps.py
tests/: test_detect_shocks.py  test_event_study.py  test_fetch_coffee.py  test_fetch_weather.py  test_process_weather.py
tools/: quality_check_report.py  visualize_regions.py
