[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coffee-pricing"
version = "0.1.0"
description = "Coffee futures price dashboard with weather correlation analysis"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2",
    "pandas>=2.2",
    "plotly>=5.18",
    "streamlit>=1.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
